<resources>
    <string name="app_name">IT_Language_Test</string>
    <string name="nav_home">Home</string>
    <string name="nav_java">Java</string>
    <string name="nav_css">CSS</string>
    <string name="nav_python">Python</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_change_pass">Change pass</string>
    <string name="nav_drawer_open">Drawer open</string>
    <string name="nav_drawer_close">Drawer close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>