<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>
    <item android:id="@+id/nav_css"
        android:title="@string/nav_css"
        android:icon="@drawable/ic_css"/>
    <item android:id="@+id/nav_java"
        android:title="@string/nav_java"
        android:icon="@drawable/ic_java"/>
    <item android:id="@+id/nav_python"
        android:title="@string/nav_python"
        android:icon="@drawable/ic_python"/>
</group>
    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_profile"
                android:title="@string/nav_profile"
                android:icon="@drawable/ic_profile"/>
            <item android:id="@+id/nav_change_pass"
                android:title="@string/nav_change_pass"
                android:icon="@drawable/ic_change_pass"/>
        </menu>

    </item>
</menu>